--- a/css/style.css
+++ b/css/style.css
@@ -368,3 +368,14 @@ ul {
 .cta:hover {
   color: darkblue;
 }
+
+/* footer */
+
+.bottom-container {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding-top: 0.01%;
+  padding-bottom: 0.01%;
+  font-size: 14px;
+}
