--- a/css/style.css
+++ b/css/style.css
@@ -34,16 +34,35 @@ h2 {
 .left-tab {
   position: fixed;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
+  border-bottom-right-radius: 0.7em;
+  border-top-right-radius: 0.7em;
   top: 50%;
-  padding: 10px;
+  padding: 0.625em;
 }
 
 .left-tab i {
-  font-size: 22px;
+  font-size: 1.375em;
   color: blue;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 789px) {
+  .left-tab {
+    position: fixed;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
+    border-bottom-left-radius: 0.7em;
+    border-top-left-radius: 0.7em;
+    border-bottom-right-radius: 0em;
+    border-top-right-radius: 0em;
+    top: 50%;
+    left: 95%;
+    padding: 0.4em;
+  }
+  .left-tab i {
+    font-size: 0.8em;
+    color: blue;
+    cursor: pointer;
+  }
 }
 
 /* nav bar */
@@ -51,11 +70,10 @@ h2 {
 .tab {
   background-color: white;
   position: fixed;
+  top: 0px;
   width: 100vw;
-  margin-top: -4.3%;
   padding-top: 1.5%;
   padding-bottom: 1.5%;
-  padding-right: 7%;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -65,15 +83,19 @@ ul {
   padding: 0;
 }
 
-.tab li {
-  display: inline;
-  float: right;
-  margin-left: 2%;
+@media only screen and (max-width: 768px) {
+  .tab {
+    padding-top: 3%;
+    padding-bottom: 3%;
+  }
+  ul {
+    display: none;
+  }
 }
 
-.home {
-  position: relative;
-  left: -720%;
+.tab li {
+  float: left;
+  margin-left: 2%;
 }
 
 .tab li a {
@@ -82,6 +104,10 @@ ul {
   text-decoration: none;
   font-size: 16px;
   cursor: pointer;
+}
+
+.amirul {
+  padding-right: 50em;
 }
 
 .tab-items:after {
@@ -149,6 +175,22 @@ ul {
 #landing-page h1 {
   padding-top: 8%;
   margin-bottom: 0;
+}
+
+@media only screen and (max-width: 789px) {
+  #landing-page h1 {
+    padding-top: 30%;
+    margin-bottom: 0;
+  }
+  h1 {
+    font-size: 2.8em;
+  }
+  h2 {
+    font-size: 1em;
+  }
+  .about-button {
+    font-size: 0.1em;
+  }
 }
 
 @keyframes button-animation {
